Added new CSS files for the Congr. UI

--- a/FrontEnd/www/index.html
+++ b/FrontEnd/www/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/congressional_map.css"/>
     <link rel="stylesheet" href="css/state_ui.css"/>
     <link rel="stylesheet" href="css/congressional_ui.css"/>
+    <link rel="stylesheet" href="css/profile_ui.css"/>
     <!-- js libraries -->
     <script type="text/javascript" src="js/d3/d3.v4.min.js"></script>
     <script type="text/javascript" src="js/d3/topojson.v2.min.js"></script>
@@ -43,7 +44,35 @@
     </head>
 
 <body>
-	<div id="map-holder" class="container"></div> 
+    <div id="map-holder" class="container">
+        <!-- <div class='container congressional-ui'> 
+            <div class='congressional-ui congressional-label'>Text</div> 
+            <div class='cart-drawer cart-drawer-bottom congressional-ui'>                             
+                <div class='close-btn congressional-ui'>☰</div>
+                <div class="vertical-menu">
+                  <a href="#" class="active">Home</a>
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                  <a href="#">Link 4</a>
+                
+                </div>
+            </div>
+        </div> -->
+    </div> 
     
     <!-- Local Scripts -->
     <script type="text/javascript" src="js/registry_flag.js"></script>
