Enabled senator image loading

--- a/FrontEnd/www/index.html
+++ b/FrontEnd/www/index.html
@@ -59,6 +59,7 @@
                             <!-- <div class='cart-drawer cart-drawer-bottom congressional-ui'> FOOTER -->
                             <!-- </div> \ -->
     <!-- Local Scripts -->
+    <script type="text/javascript" src="js/client/client.js"></script>
     <script type="text/javascript" src="js/registry_flag.js"></script>
     <script type="text/javascript" src="js/footers/footer.js"></script>
     <script type="text/javascript" src="js/footers/toggle_footer.js"></script>
