--- a/FrontEnd/poly_app/www/index.html
+++ b/FrontEnd/poly_app/www/index.html
@@ -41,8 +41,8 @@
           console.log(JSON.stringify(data, null, 2));
         });
         
-        var server_ip = "http://50.45.231.192";
-        <!-- var server_ip = "http://localhost"; -->
+        <!-- var server_ip = "http://50.45.231.192"; -->
+        var server_ip = "http://localhost";
         var us_map_url = server_ip+":5000/request_map/new_simpler_us_topo.json"
         var profile_url = server_ip+ ":5000";//"http://localhost:5000"
     </script>
