--- a/FrontEnd/poly_app/www/index.html
+++ b/FrontEnd/poly_app/www/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_body.css"/>
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_body_stances.css"/>
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_body_bio.css"/>
+    <link rel="stylesheet" href="css/user_interfaces/profile/profile_body_news.css"/>
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_header.css"/>
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_container.css"/>
     <!-- js libraries -->
