--- a/FrontEnd/poly_app/www/index.html
+++ b/FrontEnd/poly_app/www/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_body_news.css"/>
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_header.css"/>
     <link rel="stylesheet" href="css/user_interfaces/profile/profile_container.css"/>
+	
     <!-- js libraries -->
     <script type="text/javascript" src="js/d3/d3.v4.min.js"></script>
     <script type="text/javascript" src="js/d3/topojson.v2.min.js"></script>
@@ -36,7 +37,6 @@
     <!-- for debug purposes -->
     <meta http-equiv="Cache-control" content="no-cache">
     
-        
 </head>
 
 <body>
@@ -52,6 +52,8 @@
 	<!-- var server_ip = "http://localhost"; -->
         var us_map_url = server_ip+":5000/request_map/new_simpler_us_topo.json"
         var profile_url = server_ip+ ":5000";//"http://localhost:5000"
+        var node_url = server_ip+ ":8080";//"http://localhost:5000"
+		
     </script>
    
     <script type="text/javascript" src="js/headers/header.js"></script>
