--- a/FrontEnd/poly_app/www/index.html
+++ b/FrontEnd/poly_app/www/index.html
@@ -50,9 +50,9 @@
 
  var server_ip = "http://206.189.79.205";
 	<!-- var server_ip = "http://localhost"; -->
-        var us_map_url = server_ip+":5000/request_map/new_simpler_us_topo.json"
         var profile_url = server_ip+ ":5000";//"http://localhost:5000"
-        var node_url = server_ip+ ":8080";//"http://localhost:5000"
+        var node_url = server_ip+ ":8080";
+        var us_map_url = node_url +"/request_map/new_simpler_us_topo.json"
 		
     </script>
    
